# Ble-calculator

./: .gitignore  README.md  electron-builder.yml  eslint.config.mjs  evolve-calculator-theme.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.mts  vitest.config.mts
.github/workflows/: release.yml
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
.understand-anything/.trash-1783607395/: assemble-review.json  assembled-graph.json  batch-1.json  batch-2.json  batch-3.json  batch-4.json  batch-5.json  batch-6.json  batch-7.json  batches.json  fingerprint-input.json  layers.json  review.json  tour.json
.understand-anything/.trash-1783607395/tmp/: ua-arch-analyze.js  ua-arch-input.json  ua-arch-results.json  ua-file-analyzer-input-1.json  ua-file-analyzer-input-2.json  ua-file-analyzer-input-3.json  ua-file-analyzer-input-4.json  ua-file-analyzer-input-5.json  ua-file-analyzer-input-6.json  ua-file-analyzer-input-7.json  ua-file-extract-results-1.json  ua-file-extract-results-2.json  ua-file-extract-results-3.json  ua-file-extract-results-4.json  ua-file-extract-results-5.json  ua-file-extract-results-6.json  ua-file-extract-results-7.json  ua-import-map-input.json  ua-import-map-output.json  ua-scan-files.json  ua-tour-analyze.js  ua-tour-input.json  ua-tour-results.json
artifacts/browser-visual-ui-pass/: report.json
crates/native/: Cargo.toml  README.md
crates/native/src/: ble_central.rs  lib.rs
crates/native/src/ble/: mod.rs  peripheral_linux.rs  peripheral_macos.rs  peripheral_stub.rs  peripheral_windows.rs
docs/: calculator-architecture.md  developer-onboarding.md  manual-ble-e2e.md  runtime-native-and-security.md  ui-layout-and-visual-pass.md
scripts/: browser-visual-ui-pass.mjs  build-mac-arm64.command  build-native-optional.mjs  build-native.mjs  next-version.mjs  package-platforms.mjs  release-all.bat  release-all.command  visual-ui-pass.mjs  visual-ui-screenshot-app.cjs
src/electron/: main.ts  native-calculator.ts  preload.ts
src/renderer/: browser-calculator.test.ts  browser-calculator.ts  global.d.ts  index.html  log-store.ts  logging-calculator-api.test.ts  logging-calculator-api.ts  main.tsx  styles.css
src/shared/: calculator-api.ts  expression.test.ts  expression.ts
