[package]
name = "ble-calculator-native"
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi8", "serde-json"] }
napi-derive = "2"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }
uuid = { version = "1", features = ["v4", "serde"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = true
