[package]
name = "ble-calculator-native"
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22"
btleplug = "0.11.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }
napi = { version = "2", default-features = false, features = ["napi8", "serde-json"] }
napi-derive = "2"
once_cell = "1"
rand_core = { version = "0.6", features = ["getrandom"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["rt", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }

[build-dependencies]
napi-build = "2"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["crypto-rust", "linux-native-sync-persistent"] }

[profile.release]
lto = true
strip = true
