[package]
name = "ble-calculator-native"
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22"
btleplug = "0.11.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }
napi = { version = "2", default-features = false, features = ["napi8", "serde-json"] }
napi-derive = "2"
once_cell = "1"
rand_core = { version = "0.6", features = ["getrandom"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["rt", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }

[build-dependencies]
napi-build = "2"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["apple-native"] }
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSArray", "NSDictionary", "NSString", "NSData", "NSError", "NSObject", "NSEnumerator"] }
objc2-core-bluetooth = { version = "0.3", features = ["CBPeripheralManager", "CBPeripheralManagerConstants", "CBService", "CBCharacteristic", "CBAttribute", "CBUUID", "CBATTRequest", "CBAdvertisementData", "CBCentral", "CBManager", "CBPeer", "CBError", "alloc", "bitflags"] }
dispatch2 = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["windows-native"] }
# Guest BLE peripheral (GATT server + advertising) via WinRT GattServiceProvider.
windows = { version = "0.58", features = [
  "Foundation",
  "Foundation_Collections",
  "Devices_Bluetooth",
  "Devices_Bluetooth_GenericAttributeProfile",
  "Storage_Streams",
] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["crypto-rust", "linux-native-sync-persistent"] }
# Guest BLE peripheral (GATT server + advertising) via BlueZ/D-Bus.
bluer = { version = "0.17", features = ["bluetoothd"] }
# Extra tokio features the Linux peripheral thread needs (unified with the base dep).
tokio = { version = "1", features = ["rt", "time", "sync", "net", "macros"] }
futures = "0.3"

[profile.release]
lto = true
strip = true
